CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3 FATAL_ERROR)
PROJECT(PeakInvestigator-API-CPP)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

INCLUDE(CTest)
INCLUDE(InstallLocation)

FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(Libssh2 REQUIRED)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(PeakInvestigator)

IF(BUILD_TESTING)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTING)

