CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3 FATAL_ERROR)
PROJECT(PeakInvestigator-API-CPP)

SET(PeakInvestigatorSaaS_VERSION 0.9.0)

INCLUDE(CTest)
INCLUDE(cmake/InstallLocation.cmake)

FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(Libssh2 REQUIRED)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(PeakInvestigator)

IF(BUILD_TESTING)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTING)

