CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
PROJECT(PeakInvestigatorSaaS)

SET(PeakInvestigatorSaaS_VERSION 0.9.0)
SET(CMAKE_CXX_STANDARD 11)

INCLUDE(CTest)
INCLUDE(cmake/InstallLocation.cmake)
INCLUDE(cmake/FindLibSSH2.cmake)

FIND_PACKAGE(CURL REQUIRED)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(PeakInvestigator)

IF(BUILD_TESTING)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTING)

